# libolmec

./: .anjuta_sym_db.db  AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  config.sub  configure  configure.ac  libolmec.pc.in
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
man/: Makefile.am  Makefile.in  olm_close_file.3  olm_mail_message_count.3  olm_message_count.3  olm_open_file.3
src/: Makefile.am  Makefile.in  contact.c  contact.h  libolmec-0.1.pc.in  libolmec.c  libolmec.h  private.h
